src/test/deca/context/invalid/created/Objet/SelectionArithmeticNull.deca
// Description:
//  Test for arithmetic operation with a null selection
// Resultats:
//  SelectionArithmeticNull.deca:11:17: Error: Cannot cast A to int

class A {
}

{
    A newA = new A();
    int b = (int)(newA) + 1;
    println("ERRONE");
}